--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <body>
     <div class="container">
         <button id="copyButton">Get Code</button>
+        <a href="https://www.w3schools.com">Visit W3Schools</a>
     </div>
-
-    <script src="script.js"></script>
 </body>
 </html>
