--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="container">
-        <button id="copyButton">Get Code</button>
-        <a href="https://www.w3schools.com">Visit W3Schools</a>
-    </div>
+    <a href="https://notepad.pw/Pytruino24CIR"
+        class = "button">Get code</a>
 </body>
 </html>
